[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediakit"
version = "1.0.0"
description = "Professional toolkit for processing media sets including images and videos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MediaKit Team"}
]
keywords = [
    "image-processing",
    "video-processing",
    "media",
    "thumbnail",
    "preview",
    "grid",
    "archive",
    "7zip"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "Pillow>=10.0.0",
    "natsort>=8.0.0",
    "imagehash>=4.3.1",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
clip = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ftfy",
    "regex",
    "tqdm",
]
perceptual = [
    "opencv-python>=4.8.0",
    "imagehash>=4.3.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mediakit/mediakit"
Documentation = "https://github.com/mediakit/mediakit#readme"
Repository = "https://github.com/mediakit/mediakit"

[tool.setuptools.packages.find]
where = ["."]
include = ["mediakit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
